--- a/www/index.html
+++ b/www/index.html
@@ -26,23 +26,21 @@
     <script src="js/directives.js"></script>
   </head>
 
-  <body ng-app="starter" ng-controller="MapCtrl">
-    <ion-header-bar class="bar-stable">
-      <h1 class="title">Map</h1>
-    </ion-header-bar>
+  <body ng-app="starter" animation="slide-left-right-ios7">
+ 	<!-- 
+      The nav bar that will be updated as we navigate between views.
+    -->
+    <ion-nav-bar class="bar-stable nav-title-slide-ios7">
+      <ion-nav-back-button class="button-icon icon  ion-ios7-arrow-back">
+        Back
+      </ion-nav-back-button>
+    </ion-nav-bar>
+    <!-- 
+      The views will be rendered in the <ion-nav-view> directive below
+      Templates are in the /templates folder (but you could also
+      have templates inline in this html file if you'd like).
+    -->
+    <ion-nav-view></ion-nav-view>
 
-    <ion-content scroll="false">
-        <div class="list list-inset">
-            <label class="item item-input">
-                <i class="icon ion-search placeholder-icon"></i>
-                <input type="text" placeholder="Search" id="mapSearch">
-            </label>            
-        </div>
-      <map on-create="mapCreated(map)"></map>
-    </ion-content>
-
-    <ion-footer-bar class="bar-stable">
-      <a ng-click="centerOnMe()" class="button button-icon icon ion-navigate"></a>
-    </ion-footer-bar>
   </body>
 </html>
