--- a/www/index.html
+++ b/www/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="www/lib/ionic/css/ionic.css" rel="stylesheet">
-    <link href="www/css/style.css" rel="stylesheet">
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
     <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="www/css/ionic.app.css" rel="stylesheet">
+    <link href="css/ionic.app.css" rel="stylesheet">
     -->
 
     <!-- ionic/angularjs js -->
-    <script src="www/lib/ionic/js/ionic.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDYB78yCK7AiEdzWuSRs_EzsLVtFSFjSac&sensor=true&region=IN&libraries=places"></script>
 
@@ -21,11 +21,11 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-    <script src="www/js/elasticsearch.angular.min.js"></script>
-    <script src="www/js/app.js"></script>
-    <script src="www/js/services.js"></script>
-    <script src="www/js/controllers.js"></script>
-    <script src="www/js/directives.js"></script>
+    <script src="js/elasticsearch.angular.min.js"></script>
+    <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/controllers.js"></script>
+    <script src="js/directives.js"></script>
   </head>
 
   <body ng-app="starter" animation="slide-left-right-ios7">
