--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,10 @@
 
     <!-- your app's js -->
     <script src="js/elasticsearch.angular.min.js"></script>
+	 <!-- cordova facebook plugin -->
+	<script src="cdv-plugin-fb-connect.js"></script>
+	<!-- facebook js sdk -->
+	<script src="facebook-js-sdk.js"></script>
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
